# dde-launcher

./: CMakeLists.txt
interfaces/: CMakeLists.txt
plugins/appsearch/: CMakeLists.txt
src/: dfullscreenframe.cpp  dfullscreenframe.h  dwindowedframe.cpp  dwindowedframe.h  launchersys.cpp  launchersys.h  main.cpp  qml.qrc
src/dbusinterface/dbusvariant/: iteminfo.cpp  iteminfo.h
src/delegate/: appitemdelegate.cpp
src/global_util/: util.cpp  util.h
src/model/: appslistmodel.cpp  appslistmodel.h  appsmanager.cpp  appsmanager.h
src/qml/: AppGridView.qml  AppListView.qml  FullscreenFrame.qml  IconItemDelegate.qml  WindowedFrame.qml
src/quick/: CMakeLists.txt  launcherappiconprovider.cpp  launcherappiconprovider.h
src/trashutils/: appinfomonitor.cpp  appinfomonitor.h
src/utils/: CMakeLists.txt  categoryutils.cpp  categoryutils.h  iconutils.cpp  iconutils.h
src/view/: appgridview.cpp  appgridview.h  multipagesview.cpp
src/worker/: menuworker.cpp  menuworker.h
